--- a/prices/macro/tbl/macro.html
+++ b/prices/macro/tbl/macro.html
@@ -2,7 +2,7 @@
   <thead>
     <tr style="text-align: right;">
       <th>index</th>
-      <th>21-Feb</th>
+      <th>24-Feb</th>
       <th>DoD %</th>
       <th>WoW %</th>
       <th>MoM %</th>
@@ -11,124 +11,124 @@
   </thead>
   <tbody>
     <tr>
-      <td>TTF</td>
-      <td>38.46</td>
-      <td>0.2</td>
-      <td>-3.6</td>
-      <td>-4.7</td>
-      <td>-2.9</td>
+      <td>TTF YA</td>
+      <td>38.12</td>
+      <td>-0.9</td>
+      <td>-2.0</td>
+      <td>-3.5</td>
+      <td>-3.8</td>
     </tr>
     <tr>
       <td>EUA</td>
-      <td>73.9</td>
-      <td>1.7</td>
-      <td>-7.3</td>
-      <td>-3.9</td>
-      <td>-1.7</td>
+      <td>73.66</td>
+      <td>-0.3</td>
+      <td>-2.7</td>
+      <td>-4.3</td>
+      <td>-2.0</td>
     </tr>
     <tr>
       <td>DE Baseload</td>
-      <td>87.93</td>
-      <td>0.3</td>
-      <td>-6.5</td>
-      <td>-6.6</td>
+      <td>88.0</td>
+      <td>0.1</td>
+      <td>-1.9</td>
+      <td>-5.1</td>
       <td>-4.6</td>
     </tr>
     <tr>
       <td>API2</td>
-      <td>99.75</td>
-      <td>-0.2</td>
-      <td>-1.5</td>
-      <td>-8.0</td>
-      <td>-12.9</td>
+      <td>100.4</td>
+      <td>0.7</td>
+      <td>-1.2</td>
+      <td>-5.5</td>
+      <td>-12.3</td>
     </tr>
     <tr>
       <td>Brent</td>
-      <td>74.05</td>
-      <td>-2.6</td>
-      <td>-0.9</td>
-      <td>-8.6</td>
-      <td>-2.5</td>
+      <td>74.31</td>
+      <td>0.4</td>
+      <td>-1.5</td>
+      <td>-7.0</td>
+      <td>-2.1</td>
     </tr>
     <tr>
       <td>US 2YR Bond</td>
-      <td>4.2</td>
-      <td>-1.6</td>
-      <td>-1.4</td>
-      <td>-4.4</td>
-      <td>-1.1</td>
+      <td>4.17</td>
+      <td>-0.7</td>
+      <td>-3.1</td>
+      <td>-4.5</td>
+      <td>-1.7</td>
     </tr>
     <tr>
       <td>EUR/USD</td>
       <td>1.05</td>
-      <td>-0.4</td>
-      <td>-0.3</td>
-      <td>2.1</td>
+      <td>0.0</td>
+      <td>0.2</td>
+      <td>1.5</td>
       <td>1.9</td>
     </tr>
     <tr>
       <td>S&amp;P500</td>
-      <td>6013</td>
-      <td>-1.7</td>
-      <td>-1.7</td>
-      <td>3.0</td>
-      <td>2.5</td>
+      <td>5983</td>
+      <td>-0.5</td>
+      <td>-2.4</td>
+      <td>2.4</td>
+      <td>2.0</td>
     </tr>
     <tr>
       <td>DAX</td>
-      <td>22287</td>
-      <td>-0.1</td>
-      <td>-1.0</td>
-      <td>10.7</td>
-      <td>11.3</td>
+      <td>22425</td>
+      <td>0.6</td>
+      <td>-1.8</td>
+      <td>10.6</td>
+      <td>12.0</td>
     </tr>
     <tr>
       <td>Gold</td>
-      <td>2953</td>
-      <td>-0.1</td>
-      <td>1.8</td>
-      <td>10.3</td>
-      <td>10.6</td>
+      <td>2963</td>
+      <td>0.3</td>
+      <td>0.5</td>
+      <td>10.5</td>
+      <td>11.0</td>
     </tr>
     <tr>
       <td>Copper</td>
-      <td>4.62</td>
+      <td>4.56</td>
       <td>-1.1</td>
-      <td>-1.1</td>
-      <td>6.7</td>
-      <td>14.6</td>
+      <td>-1.7</td>
+      <td>5.1</td>
+      <td>13.4</td>
     </tr>
     <tr>
       <td>DXY</td>
-      <td>106.61</td>
-      <td>0.2</td>
-      <td>-0.1</td>
-      <td>-3.0</td>
-      <td>-2.5</td>
+      <td>106.6</td>
+      <td>-0.0</td>
+      <td>-0.4</td>
+      <td>-2.4</td>
+      <td>-2.6</td>
     </tr>
     <tr>
       <td>China CSI 300</td>
-      <td>3978</td>
-      <td>1.3</td>
-      <td>1.0</td>
-      <td>6.9</td>
-      <td>4.1</td>
+      <td>3969</td>
+      <td>-0.2</td>
+      <td>1.5</td>
+      <td>3.9</td>
+      <td>3.9</td>
     </tr>
     <tr>
       <td>Bitcoin</td>
-      <td>96155</td>
-      <td>-2.2</td>
-      <td>-1.4</td>
-      <td>1.7</td>
-      <td>-0.8</td>
+      <td>91508</td>
+      <td>-4.8</td>
+      <td>-4.3</td>
+      <td>-5.2</td>
+      <td>-5.6</td>
     </tr>
     <tr>
       <td>VIX</td>
-      <td>18.21</td>
-      <td>16.3</td>
-      <td>23.3</td>
-      <td>-5.1</td>
-      <td>1.6</td>
+      <td>18.98</td>
+      <td>4.2</td>
+      <td>23.6</td>
+      <td>1.4</td>
+      <td>5.9</td>
     </tr>
   </tbody>
 </table>
